Fix text overlap on resize

--- a/submissions/zhenyakornilov/js-dom/css/styles.css
+++ b/submissions/zhenyakornilov/js-dom/css/styles.css
@@ -78,7 +78,7 @@ button {
 
 .header .title {
   color: #8fe3cf;
-  font-size: 3.6rem;
+  font-size: 3.2rem;
 }
 
 .header .check-switch {
@@ -385,16 +385,38 @@ button {
 
 @media screen and (max-width: 508px) {
   .header .title {
-    font-size: 100%;
+    font-size: 1.8rem;
+  }
+
+  .content-body {
+    grid-template-rows: auto auto auto;
+    row-gap: 0;
   }
 
   .content-body .desc-wrapper .museum-image {
     width: 100%;
   }
 }
-
 @media screen and (max-width: 356px) {
   #root {
     font-size: 50%;
+  }
+
+  .content-body {
+    margin: 2rem 2rem 0 2rem;
+  }
+}
+
+@media screen and (max-width: 290px) {
+  #root {
+    font-size: 43%;
+  }
+
+  .content-body .desc-wrapper {
+    font-size: 2rem;
+  }
+
+  .museum-link {
+    font-size: 1.6rem;
   }
 }
